# SceneEquipament

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  debug.sh
.zed/: debug.json  tasks.json
docs/: Functionality.md  Post01_Resources.md
src/: AttributeTypes.h  AttributeTypes.hpp  AttributeVector.h  Camera.hpp  DepDataHandle.hpp  Light.hpp  Material.h  Material.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  ParameterTypes.h  Resource.h  Resource.hpp  Scene.hpp  SceneTree.hpp  Shader.h  Shader.hpp  Texture.hpp  gbg_traits.h  gbg_traits.hpp  macros.hpp
src/loaders/: objLoader.hpp  texLoader.hpp
tests/: loader_tests.cpp  main.cpp  material_tests.cpp  mesh_tests.cpp  model_tests.cpp  resource_tests.cpp  scene_tests.cpp
tests/data/: TestGeo.blend  test.frag  test.vert
